# ctnda.github.io

./: README.md  ctndacomp.html  dvdctnda.html  index.html  mania_pfe.md  original.ctndaasia.html  scandisk.py  videomix.html
data/: .~lock.dvdr.csv#  ctnda.tsv  dvdr.csv  dvdr.tsv
mediainfo/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  011.txt  012.txt  013.txt  014.txt
utils/: ascii2tsv.py  disc_packer.py  html2tsv.py  mercoledi_cinema.py  pyproject.toml  scan_disk_cumulative.py  videomix.html
